--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -100,101 +100,102 @@
 
 		<!-- Two Future -->
 		<section id="two" class="spotlight style2 right">
-			<span class="image fit main"><img src="images/fall-image.jpg" alt="Autumn with srange trees and the sun facing you /></span>
-			<div class=" content">
+			<span class="image fit main"><img src="images/fall-image.jpg" alt="" /></span>
+			<div class="content">
 				<header>
 					<h2>What will the future be like</h2>
-					<p>What I see In the Next five years. </p>
+					<p>What I see In the Next five years.</p>
 				</header>
 				<p>Within The next five years, I see myself improved from every angle. More Likely, I see myself married
 					and living in a beautiful apartment with a nice view, and in my parking spot will be my dream
 					car. If I were to live in nature, my favorite time of the year would be Autumn, the color it
-					produces is the greatest there is </p>
-				<p>I would also support my family any way possible, being able to give them what they couldnt give me.
+					produces is the greatest there is.</p>
+				<p>I would also support my family any way possible, being able to give them what they couldn't give me.
 					On the
-					Development side i see Node being even more used then Java, mostly from start ups.</p>
+					Development side I see Node being even more used then Java, mostly from start up companies.</p>
+				<!-- <ul class="actions">
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul> -->
+			</div>
+			<a href="#three" class="goto-next scrolly">Next</a>
+		</section>
+
+
+
+
+
+		<a href="#three" class="goto-next scrolly">Next</a>
+		</section>
+		<!-- Three What youll see in me -->
+		<section id="three" class="spotlight style3 left">
+			<span class="image fit main bottom"><img src="images/toyota-toyota-supra.jpg"
+					alt="Race car from Toyota" /></span>
+			<div class="content">
+				<header>
+					<h2>From Me to you</h2>
+					<p>What you'll expect from Me</p>
+				</header>
+				<p></p>
 				<ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
-	</div>
-
-
-
-
-
-	<a href="#three" class="goto-next scrolly">Next</a>
-	</section>
-
-	<!-- Three What youll see in me -->
-	<section id="three" class="spotlight style3 left">
-		<span class="image fit main bottom"><img src="images/toyota-toyota-supra.jpg"
-				alt="Race car from Toyota" /></span>
-		<div class="content">
-			<header>
-				<h2>From Me to you</h2>
-				<p>What you'll expect from Me</p>
-			</header>
-			<p></p>
-			<ul class="actions">
-				<li><a href="#" class="button">Learn More</a></li>
-			</ul>
-		</div>
-		<a href="#four" class="goto-next scrolly">Next</a>
-	</section>
-
-	<!-- Four -->
-	<section id="four" class="wrapper style1 special fade-up">
-		<div class="container">
-			<header class="major">
-				<h2>Accumsan sed tempus adipiscing blandit</h2>
-				<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
-			</header>
-			<div class="box alt">
-				<div class="row gtr-uniform">
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-chart-area"></span>
-						<h3>Ipsum sed commodo</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-comment"></span>
-						<h3>Eleifend lorem ornare</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-flask"></span>
-						<h3>Cubilia cep lobortis</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-paper-plane"></span>
-						<h3>Non semper interdum</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-file"></span>
-						<h3>Odio laoreet accumsan</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-					<section class="col-4 col-6-medium col-12-xsmall">
-						<span class="icon solid alt major fa-lock"></span>
-						<h3>Massa arcu accumsan</h3>
-						<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-					</section>
-				</div>
 			</div>
-			<footer class="major">
-				<ul class="actions special">
-					<li><a href="#" class="button">Magna sed feugiat</a></li>
-				</ul>
-			</footer>
-		</div>
-	</section>
+			<a href="#four" class="goto-next scrolly">Next</a>
+		</section>
 
-	<!-- Five -->
+		<!-- Four -->
+		<section id="four" class="wrapper style1 special fade-up">
+			<div class="container">
+				<header class="major">
+					<h2>Accumsan sed tempus adipiscing blandit</h2>
+					<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+				</header>
+				<div class="box alt">
+					<div class="row gtr-uniform">
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-chart-area"></span>
+							<h3>Ipsum sed commodo</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-comment"></span>
+							<h3>Eleifend lorem ornare</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-flask"></span>
+							<h3>Cubilia cep lobortis</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-paper-plane"></span>
+							<h3>Non semper interdum</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-file"></span>
+							<h3>Odio laoreet accumsan</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-lock"></span>
+							<h3>Massa arcu accumsan</h3>
+							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+						</section>
+					</div>
+				</div>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="#" class="button">Magna sed feugiat</a></li>
+					</ul>
+				</footer>
+			</div>
+		</section>
+
+		<!-- Five -->
 
 
-	<!-- <section id="five" class="wrapper style2 special fade">
+		<!-- <section id="five" class="wrapper style2 special fade">
 		<div class="container">
 			<header>
 				<h2>Magna faucibus lorem diam</h2>
@@ -211,25 +212,25 @@
 		</div>
 	</section> -->
 
-	<!-- Footer -->
-	<footer id="footer">
-		<ul class="icons">
-			<li><a href="https://twitter.com/ironipad64" class="icon brands alt fa-twitter"><span
-						class="label">Twitter</span></a></li>
-			<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-			<li><a href="https://www.linkedin.com/in/ismael-hernandez-84422b1ba/"
-					class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-			<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-			<li><a href="https://github.com/Ironipad64" class="icon brands alt fa-github"><span
-						class="label">GitHub</span></a></li>
-			<li><a href="mailto:Ironipad64@gmail.com" class="icon solid alt fa-envelope"><span
-						class="label">Email</span></a></li>
-		</ul>
-		<ul class="copyright">
-			<li>&copy; Untitled. All rights reserved.</li>
-			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-		</ul>
-	</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="https://twitter.com/ironipad64" class="icon brands alt fa-twitter"><span
+							class="label">Twitter</span></a></li>
+				<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+				<li><a href="https://www.linkedin.com/in/ismael-hernandez-84422b1ba/"
+						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+				<li><a href="https://github.com/Ironipad64" class="icon brands alt fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="mailto:Ironipad64@gmail.com" class="icon solid alt fa-envelope"><span
+							class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
 	</div>
 
