--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						</header>
 						<p>This was actually a really fun project, used react with axios, simple easy fun</p>
 						<ul class="actions">
-							<li><a href="https://crispysandwhich.github.io/NasaApi/" class="button" target="_blank">View Code</a></li>
+							<li><a href="https://nasa-api-tau.vercel.app" class="button" target="_blank">View Code</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
