adds reach lms and restyled main projects

--- a/index.html
+++ b/index.html
@@ -34,30 +34,31 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>The Expat Log</h2>
-							<p>A global social network where expats share their photos and experiences.</p>
+							<h2>Reach LMS</h2>
+							<p>An open-source learning management system designed for the developing world. Reach lets organizations offer education and training to anyone—whether they're working from a laptop in a city center or a solar-charged flip phone in a remote village.</p>
 							<ul class="actions stacked">
-								<li><a href="https://expatlog.vercel.app/" class="button" target='_blank'>View Site</a></li>
+								<li><a href="https://github.com/aldenho52/reach-lms-fe-a" class="button" target='_blank'>View Site</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="/images/expatLogLogo.svg" alt="Image of my react shopping cart application" />
+							<img src="/images/reachCoursePage.jpg" alt="Image of my react shopping cart application" />
 						</div>
 					</section>
+
 
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>React Shopping Cart</h2>
-							<p>Buy some of your favorite books with this shopping page and cart made with React JS.</p>
+							<h2>The Expat Log</h2>
+							<p>A global social network where expats share their photos and experiences.</p>
 							<ul class="actions stacked">
-								<li><a href="https://react-shopping-cart-gray.vercel.app/" target='_blank' class="button">View Site</a></li>
+								<li><a href="https://expatlog.vercel.app/" target='_blank' class="button">View Site</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/React-Shopping-Cart.png" alt="" />
+							<img src="/images/expatLogLogo.svg" alt="" />
 						</div>
-					</section>
+					</section> 
 
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
