--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Ismael-Hernandez portfolio</title>
+	<title>Ismael's portfolio</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,8 +46,8 @@
 							</li>
 						</ul>0
 					</li>
-					<li><a href="elements.html">Elements</a></li>
-					<li><a href="#" class="button primary">Sign Up</a></li>
+					<!-- <li><a href="elements.html">Elements</a></li> -->
+					<!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
 				</ul>
 			</nav>
 		</header>
@@ -74,12 +74,13 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>My Talents</h2>
-								<p>What you will be seeing me do and learn</p>
+								<p>About my self</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>I know more than just Software Engineering. I aspire to learn alot in life, from auto
-								mechanics, music, sports, culinary arts, and gaming. In the car world id either go two
+								mechanics, music, sports, culinary arts, video production, and gaming. In the car world
+								id either go two
 								paths JDM (Japanese Domestic Market) or American muscle. i see a future where I'll
 								either own a Toyota Supra mark-4, and/or Dodge Challenger Hellcat </p>
 						</div>
@@ -106,13 +107,12 @@
 					<h2>What will the future be like</h2>
 					<p>What I see In the Next five years.</p>
 				</header>
-				<p>Within The next five years, I see myself improved from every angle. More Likely, I see myself married
-					and living in a beautiful apartment with a nice view, and in my parking spot will be my dream
-					car. If I were to live in nature, my favorite time of the year would be Autumn, the color it
-					produces is the greatest there is.</p>
-				<p>I would also support my family any way possible, being able to give them what they couldn't give me.
-					On the
-					Development side I see Node being even more used then Java, mostly from start up companies.</p>
+				<p>Flying cars, Teleportation, Iron man suits the possibilities are endless. The
+					future wont just come to us, we have to make it happen. I wish to become apart of the
+					future where Elon Musk becomes the president of the US. </p>
+				<p>Within The next five years, I see myself improved from every angle. More
+					Likely, I see myself either married or living on my own, knowing that, It's
+					very likely that I will have more freedom towards my other hobbies.</p>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul> -->
@@ -135,9 +135,13 @@
 					<h2>From Me to you</h2>
 					<p>What you'll expect from Me</p>
 				</header>
+				<p>Some words to describe me are Dependable, Orginized, Confident, Cooaporative,
+					Determind, Patient, Honest, Relaxed, and Responible. I'm especially punctual when
+					it comes to either school or work, dont even remeber the last time I ever arrived
+					late for anything. </p>
 				<p></p>
 				<ul class="actions">
-					<li><a href="#" class="button">Learn More</a></li>
+					<!-- <li><a href="#" class="button">Learn More</a></li> -->
 				</ul>
 			</div>
 			<a href="#four" class="goto-next scrolly">Next</a>
