edited student status

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/quantum riddle.jpg" alt="quntum riddle" /></span>
 								<h2 id="bio">A little about myself.</h2>
-								<p id="bioContent">  Welcome to my page. My name, as the title says, is Joseph Panetta. Im a full time student at Lambda School Online for full stack Web development. A serious career shift for me as you will discover in my <a href="#work">Work And Professional</a> outliner. I have been called a jack of all trades, but I'd like to think Of it as, lets say, well rounded. How much can you know if you stop trying to know. I'm the kind of person that wont really feel comfortable doing anything unless i read the book and talked to everyone i could, and researched every possible avenue. I believe that kind of perserverence combined with a good solid education makes me a valuable addition to any dev team. </p>
+								<p id="bioContent">  Welcome to my page. My name, as the title says, is Joseph Panetta. Im a recent graduate from Lambda School Online for full stack Web development. A serious career shift for me as you will discover in my <a href="#work">Work And Professional</a> outliner.
+								</p>
+								<p>                    
+								I have been called a jack of all trades,but I'd like to think Of it as, lets say, well rounded. How much can you know if you stop trying to know. I'm the kind of person that wont really feel comfortable doing anything unless i read the book and talked to everyone i could, and researched every possible avenue. I believe that kind of perserverence combined with a good solid education makes me a valuable addition to any dev team. </p>
 								
 							</article>
 
