--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>Besides the fundamentals in Electronics and Communication Engineering, I have learned advanced aspects of Random Signal Analysis, Antenna and Propagation, Methods for Digital Filtering, Computer Networks and Internet, Satellite Communication and Information Theory and Coding during my Masters program at California State University, Fullerton.</p>
-								<p> I am currently seeking Full-Time position in QAE, SDET, Validation roles in Firmware and/or Software domain. I am currently in the process of learning Data Structure and Algorithm, API testing, WiFi,Bluetooth and CAN portocol for testing. I also learning and working on small projects using C/C++ to best fit into firmware/application software for embedded/IOT/electrical devices. <br> I try to learn something new everyday. 
-									One such example is this website. Built this website in 2 days with no background in HTML or CSS. I would like to Thank HTML5 for helping with the design.</p>
+								<p> I am currently seeking Full-Time position in QAE, SDET, Validation roles in Firmware and/or Software domain. I am currently in the process of learning Data Structure and Algorithm, API testing, WiFi,Bluetooth and CAN portocol for testing. I also learning and working on small projects using C/C++ to best fit into firmware/application software for embedded/IOT/electrical devices. Please do check my Github repository and LinkedIn profile linked below.<br> I try to learn something new everyday. 
+									One such example is this website. Built this website in 2 days with no background in HTML or CSS. I would like to Thank HTML5 UP for helping with the design.</p>
 								<p>Skills: <br>
 									Electrical Engineering Software: MATLAB, Simulink<br>
 									Programming Skills: C, Python<br>
@@ -99,7 +99,7 @@
 								<h2 class="major">Contact</h2>
 								<p>email ID: manojashokajadhav@gmail.com</p>
 								<p>I fully intend to monitor email's, I get from the Contact  section on this website, so that should be the easiest way to get in touch with me. </p>
-								<p>My social media accounts are linked below and I respond earliest to LinkedIn messages.</p>
+								<p>My social media accounts are linked below and I respond earliest to LinkedIn message's.</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/manoj-jadhav-8080a28a/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://twitter.com/manojaj1993" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
