fixed intro text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>While I was in high school I wanted to get into Computer Programming. I wan't quite sure where I would end up with that. I played football and planned on getting a scholarship to pa for my schooling.</p>
+								<p>While I was in high school I wanted to get into Computer Programming. I wasn't quite sure where I would end up going to become a coder.I took a Web Development class during my senior year and I just felt excited learning how to build websites and loved the enviorment I was able to work in. I sat around my friends listening to music and watching the magic I was making come to life. After graduation my plan was to go to college and play football. Things didn't go as planned due to covid.</p>
 							</article>
 
 						<!-- Work -->
