--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>While I was in high school I wanted to get into Computer Programming. I wan't quite sure where I would end up with that. I played football and planned on getting a scholarship to pa for my schooling.</p>
+								<p>While I was in high school I wanted to get into Computer Programming. As I looked into it more I learned about Front-End Development. I then found Lambda School and started my journey!</p>
 							</article>
 
 						<!-- Work -->
