made some changes for the format

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div id="intro">
 				<h1><br />
 				</h1>
-				<p>Hi I'm Carlos Turcios full-stack web developer <a href="https://twitter.com/ajlkn"></a> <a
+				<p>Hi I'm Carlos Turcios Full-Stack web developer <a href="https://twitter.com/ajlkn"></a> <a
 						href="https://html5up.net"></a><br />
 					<a href="https://html5up.net/license"></a>
 				</p>
@@ -39,11 +39,11 @@
 			</header>
 
 			<!-- Nav -->
-			<nav id="nav">
+			<nav id="nav">~
 				<ul class="links">
 					<li class="active"><a href="index.html"></a></li>
-					<!-- <li><a href="generic.html">Generic Page</a></li>
-					<li><a href="elements.html">Elements Reference</a></li> -->
+					<li><a href="generic.html">Projects</a></li>
+					<!-- <li><a href="elements.html">Elements Reference</a></li> --> -->
 				</ul>
 				<ul class="icons">
 					<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -67,7 +67,7 @@
 							Web Design and Development <br />
 							building unique websites that will help your business grow</p>
 					</header>
-					<a href="#" class="image main"><img src="images/Screenshot (65).png" alt="potluck-website" /></a>
+					<!-- <a href="#" class="image main"><img src="images/Screenshot (65).png" alt="potluck-website" /></a> -->
 					<ul class="actions special">
 						<li><a href="#" class="button large">Hire Me</a></li>
 					</ul>
