added linked in icon

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 			<nav id="nav">~
 				<ul class="links">
 					<li class="active"><a href="index.html"></a></li>
-					<li><a href="generic.html">Projects</a></li>
-					<!-- <li><a href="elements.html">Elements Reference</a></li> --> -->
+					<!-- <li><a href="generic.html">Projects~</a></li> -->
+					<!-- <li><a href="elements.html">Elements Reference</a></li> --> 
 				</ul>
 				<ul class="icons">
 					<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
+					<li><a href="https://www.linkedin.com/in/carloseturcios/" class="fab fa-linkedin-in"><span class="label">Linkedin</span></a></li> 
 					<li><a href="https://github.com/CarlosETurcios/" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
