fixed some more issues

--- a/index.html
+++ b/index.html
@@ -179,9 +179,10 @@
 						</ul>
 					</article>
 					<article>
-						<p></p>
-						<h2>Sodumega</h2>
-						<p>An app that helps learn and maste the art of Seduku</p>
+						<header>
+							<h2><a href="https://omega2020-be.vercel.app/">Sodumega</a></h2>
+					    </header>
+						<p>An app that helps learn and master the art of Seduku.</p>
 						<p>
 							<ul>
 								<h3>Technologies Used</h3>
