--- a/index.html
+++ b/index.html
@@ -247,9 +247,8 @@
 							<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a>
 							</li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span
-										class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span
-										class="label">Instagram</span></a></li> -->
+										class="label">Facebook</span></a></li>-->
+							<li><a href="https://drive.google.com/file/d/1ngL-1LtpY2TS0zKMvMlurJmiK8lANyaz/view?usp=sharing" class="resume"><span>Resume</span></a></li> 
 							<li><a href="https://github.com/CarlosETurcios/" class="icon brands alt fa-github"><span
 										class="label">GitHub</span></a></li>
 										
