ajusted the resume

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
 						<!-- <p>4704 Shoen Ave <br /> -->
 						<!-- Las Vegas , NV 89145</p> -->
 					</section>
-					<!-- <section> -->
-						<!-- <h3>Phone</h3>
-						<p><a href="#">(702) 408-4644 </a></p> -->
-					<!-- </section> -->
+						<section> 
+							<h3>Phone</h3>
+							<p><a href="https://drive.google.com/file/d/1ngL-1LtpY2TS0zKMvMlurJmiK8lANyaz/view?usp=sharing" class="resume">Resume</a></p> -->
+						</section> 
 					<section>
 						<h3>Email</h3>
 						<p><a href="#">turcios50@gmail.com</a></p>
@@ -248,7 +248,7 @@
 							</li>
 							<li><a href="#" class="icon brands alt fa-facebook-f"><span
 										class="label">Facebook</span></a></li>-->
-							<li><a href="https://drive.google.com/file/d/1ngL-1LtpY2TS0zKMvMlurJmiK8lANyaz/view?usp=sharing" class="resume"><span>Resume</span></a></li> 
+							<!-- <li><a href="https://drive.google.com/file/d/1ngL-1LtpY2TS0zKMvMlurJmiK8lANyaz/view?usp=sharing" class="resume"><span>Resume</span></a></li>  -->
 							<li><a href="https://github.com/CarlosETurcios/" class="icon brands alt fa-github"><span
 										class="label">GitHub</span></a></li>
 										
