--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						<!-- Las Vegas , NV 89145</p> -->
 					</section>
 						<section> 
-							<h3>Phone</h3>
+							<h3>Resume</h3>
 							<p><a href="https://drive.google.com/file/d/1ngL-1LtpY2TS0zKMvMlurJmiK8lANyaz/view?usp=sharing" class="resume">Resume</a></p> -->
 						</section> 
 					<section>
