added sodumega link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					</article>
 					<article>
 						<header>
-							<h2><a href="https://omega2020-be.vercel.app/">Sodumega</a></h2>
+							<h2><a href="https://sodumega.vercel.app/">Sodumega</a></h2>
 					    </header>
 						<p>An app that helps learn and master the art of Seduku.</p>
 						<p>
