--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 						<header>
 							<h2><a href="https://sodumega.vercel.app/">Sodumega</a></h2>
 					    </header>
+						<img src="./images/SodumegaCapture.PNG" alt="sodumega-screenshot"/>
 						<p>An app that helps learn and master the art of Seduku.</p>
 						<p>
 							<ul>
