--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						<header>
 							<h2><a href="https://sodumega.vercel.app/">Sodumega</a></h2>
 					    </header>
-						<a href="#" class="image fit"><img src="./images/SodumegaCapture.PNG" alt="sodumega-screenshot"/></a>
+						<a href="https://sodumega.vercel.app/" class="image fit"><img src="./images/SodumegaCapture.PNG" alt="sodumega-screenshot"/></a>
 						<p>An app that helps learn and master the art of Seduku.</p>
 						<p>
 							<ul>
