--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<h2><a href="#">About me<br />
 								</a></h2>
 						</header>
-						<a href="#" class="image fit"><img src="images/20190408_204528 (1).jpg" alt="myPic" /></a>
+						<a href="#" class="image fit"><img src="WIN_20210428_11_24_25_Pro.jpg" alt="myPic" /></a>
 						<p>Hello I'm Carlos Turcios from Las Vegas Nevada.
                             Passionate about technology and designing high-quality websites.
 
