--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/html-css.PNG" alt="" /></a>
+								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
 								<h3><a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank">HTML+CSS Practice</a></h3>
 								<p>Practice semantic HTMLand CSS.</p>
 							</article>
