--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank" class="image featured"><img src="images/co-make.jpg" alt="" /></a>
-								<h3><a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank">HTML+CSS Practice</a></h3>
+								<h3><a href="https://codepen.io/mhmusa/pen/PowZQxz" target="_blank">Co-Make App</a></h3>
 								<p>Practice semantic HTMLand CSS.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/git-for-web.PNG" alt="" /></a>
-								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Git for Web</a></h3>
+								<a href="https://github.com/MosharrafMusa" target="_blank" class="image featured"><img src="images/better-prof-app.jpg" alt="" /></a>
+								<h3><a href="https://github.com/MosharrafMusa" target="_blank">Better Professor App </a></h3>
 								<p>Practice Git with Dev Team.</p>
 							</article>
 						</div>
