--- a/index.html
+++ b/index.html
@@ -48,19 +48,12 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/intro.jpg" alt="" /></span>
-								<p>While I was in high school I wanted to get into Computer Programming. As I looked into it more I learned about Front-End Development. I then found Lambda School and started my journey!</p>
+								<p>I am 21 years old Front End Developer with some back end experience. I develop and design functional web applications using latest web standadrs as the main prinicples.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<h3>LinkedIn Clone</h3>
-								<img src="images/linkedIn.png" class="image main" />
-								
-								
-								<p>Register/Login, Connected to a database, Create a post. Made using React Redux, Material UI and Firebase</p>
-								<a target="_blank" rel="noopener noreferrer" href="https://github.com/Jakobimatagi/linked-in-clone" taget="_blank">Go To GitHub Repository</a>
-
 								<h3>Quote App</h3>
 								<video class="image main" autoplay>
 									<source src="videos/quote-app.mp4"	type="video/mp4">
@@ -83,14 +76,14 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am a part time student at Lambda School. Currently studying Full Stack Web Development. Projected graduation Fall of 2021.</p>
+								<span class="image main"><img src="images/Galaxy Motivation LinkedIn Post Header.jpg" alt="motivation" /></span>
+								<p>I am a student of Lambda School. Studying full stack development. I believe culture is one of the biggest deciding factors of success and failure. Passionate about helping youth to find their passions and to chasing them!</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<!-- <form method="post" action="#">
+								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -109,12 +102,12 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form> -->
+								</form>
 								<ul class="icons">
-									<li><a href="https://twitter.com/JakobiMatagi" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/jakobi.matagi" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/jakobi_matagi/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://github.com/Jakobimatagi" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
