--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
+								<h3>LinkedIn Clone</h3>
+								<img src="images/linkedIn.png" class="image main" />
+								
+								
+								<p>Register/Login, Connected to a database, Create a post. Made using React Redux, Material UI and Firebase</p>
+								<a target="_blank" rel="noopener noreferrer" href="https://github.com/Jakobimatagi/linked-in-clone" taget="_blank">Go To GitHub Repository</a>
+
 								<h3>Quote App</h3>
 								<video class="image main" autoplay>
 									<source src="videos/quote-app.mp4"	type="video/mp4">
