--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form> -->
+								<h3>Email: jkmatagi000@gmail.com</h3>
 								<ul class="icons">
 									<li><a href="https://twitter.com/JakobiMatagi" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/jakobi.matagi" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
