--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<a target="_blank" rel="noopener noreferrer" href="https://github.com/Jakobimatagi/linked-in-clone" taget="_blank">Go To GitHub Repository</a>
 
 								<h3>Quote App</h3>
-								<video class="image main" onclick="this.play()">
+								<video class="image main" autoplay>
 									<source src="videos/quote-app.mp4"	type="video/mp4">
 								</video>
 								
