added labs project

--- a/index.html
+++ b/index.html
@@ -229,6 +229,37 @@
               >
             </article>
           </div>
+          <div class="col-4 col-6-medium col-12-small">
+            <article class="box style2">
+              <a
+                href="https://liveinthebestplace.netlify.app/"
+                class="image featured"
+                ><img src="images/liveinthebestplace.png" alt=""
+              /></a>
+              <h3>
+                <a href="https://liveinthebestplace.netlify.app/"
+                  >Live in the Best Place</a
+                >
+              </h3>
+              <p>
+                This was a Lambda Labs project that aimed to be the best
+                resource for researching cities to live. We aimed to empower the
+                user with important data categories for what makes a good city
+                to live in. This project was built over 4 weeks with a team of
+                web developers, data scientist, UX designer and an iOS
+                developer. The tech stack used was React, Redux, Styled
+                Components, and Jest (testing) on the frontend. Node and MongoDB
+                was used to build out the backend. The project consisted of a
+                product vision document, 5 product release canvases, usability
+                testing, and extensive competition, technical and user research.
+              </p>
+              <a
+                href="https://github.com/restaurant123/FE/tree/harjoth-khara"
+                class="icon fa-github"
+                ><span class="label">Github</span></a
+              >
+            </article>
+          </div>
         </div>
         <footer>
           <p>You can find more of my projects on my Github Page</p>
