--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<img src="images/amazonClone.png" class="image main" />
 								
 								
-								<p>Static Amazon Home page. Using Next.js and Tailwind.css | Product Images coming from fake store api</p>
+								<p>Static Amazon Home page. Using Next.js and Tailwind.css | Product Images coming from fake store api. Adding more to it at the moment!</p>
 								<a target="_blank" rel="noopener noreferrer" href="https://github.com/Jakobimatagi/linked-in-clone" taget="_blank">Go To GitHub Repository</a>
 								<a target="_blank" rel="noopener noreferrer" href="https://vercel.com/jakobimatagi/amazon-clone" taget="_blank">Go To Deployed App</a>
 
