--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								
 								<p>Static Amazon Home page. Using Next.js and Tailwind.css | Product Images coming from fake store api. Adding more to it at the moment!</p>
 								<a target="_blank" rel="noopener noreferrer" href="https://github.com/Jakobimatagi/linked-in-clone" taget="_blank">Go To GitHub Repository</a>
-								<a target="_blank" rel="noopener noreferrer" href="https://vercel.com/jakobimatagi/amazon-clone" taget="_blank">Go To Deployed App</a>
+								<a target="_blank" rel="noopener noreferrer" href="https://amazon-clone-1thze5xxw-jakobimatagi.vercel.app/" taget="_blank">Go To Deployed App</a>
 
 								<h3>LinkedIn Clone</h3>
 								<img src="images/linkedIn.png" class="image main" />
