--- a/index.html
+++ b/index.html
@@ -56,66 +56,71 @@
               alt="Image of Arizona landscape"
           /></span>
           <p>
-            Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
-            aliquam facilisis ante interdum congue. Integer mollis, nisl amet
-            convallis, porttitor magna ullamcorper, amet egestas mauris. Ut
-            magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-            By the way, check out my <a href="#work">awesome projects</a>.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-            dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
-            torquent per conubia nostra, per inceptos himenaeos. Etiam tristique
-            libero eu nibh porttitor fermentum. Nullam venenatis erat id
-            vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae
-            dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in
-            lectus. Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. In non lorem sit amet elit
-            placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.
+            Hello, I'm Stone and I currently live in Phoenix, AZ. I have been
+            working for a movie theater company since 2014 but have recently
+            been looking into a career change into web development. I've been
+            educating myself about the web development field by attending an
+            online school called Lambda School where I have learned to become a
+            full stack web developer by gaining knowledge about JavaScript,
+            React, Node.js, and Python to name a few. By the way, check out my
+            <a href="#work">awesome projects</a>.
           </p>
         </article>
 
         <!-- Work -->
         <article id="work">
           <h2 class="major">Projects</h2>
-          <h3>Pizza Order App</h3>
+          <h3>Anywhere Fitness App</h3>
           <span class="image main"
             ><img
-              src="images/pizza-order-form-image.png"
-              alt="Pizza order form app"
+              src="images/anywhereFitnessHomePage.png"
+              alt="Anywhere Fitness App Home Page"
           /></span>
           <p>
-            Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
-            at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
-            urna nisi, fringila lorem et vehicula lacinia quam. Integer
-            sollicitudin mauris nec lorem luctus ultrices.
+            An app designed to allow fitness instructors and clients to hold and
+            attend fitness classes wherever they might be held.
           </p>
-          <button
-            class="btn btn-success"
-            onclick=" window.open('https://github.com/Stone98/web-sprint-challenge-single-page-applications','_blank')"
-          >
-            View Code Here
-          </button>
-          <h3>Stranger Things Episode Summary App</h3>
-          <span class="image main"
-            ><img
-              src="images/stranger-things-app.png"
-              alt="stranger things episode summary app"
-          /></span>
           <p>
-            Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
-            at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
-            urna nisi, fringila lorem et vehicula lacinia quam. Integer
-            sollicitudin mauris nec lorem luctus ultrices.
+            These days, fitness classes can be held anywhere- a park, an
+            unfinished basement or a garage- not just at a traditional gym.
+            Certified fitness instructors need an easy way to take the
+            awkwardness out of attendance taking and client payment processing.
+            While you could use several mobile apps to accomplish this,
+            AnywhereFitness is the all-in-one solution to meet your
+            “on-location” fitness class needs. AnywhereFitness makes it painless
+            for Instructors and Clients alike to hold and attend Fitness classes
+            wherever they might be held. Instructors can take attendance,
+            request and process payments, create virtual “punch passes” for each
+            type of class offered, alert clients of cancellations or location
+            changes and so much more. Clients can easily find out information on
+            classes - location, class size, start time and duration, as well as
+            reschedule or cancel an upcoming appointment or reservation right
+            from the mobile app.
           </p>
-          <button
-            class="btn btn-success"
-            onclick=" window.open('https://github.com/Stone98/React-Testing-TV-Show','_blank')"
-          >
-            View Code Here
-          </button>
+          <div>
+            <button
+              class="btn btn-success"
+              onclick=" window.open('https://github.com/tt-webft-20AnywhereFitness/front-end','_blank')"
+            >
+              View Front End Code Here
+            </button>
+          </div>
+          <div>
+            <button
+              class="btn btn-success"
+              onclick=" window.open('https://github.com/tt-webft-20AnywhereFitness/back-end','_blank')"
+            >
+              View Back End Code Here
+            </button>
+          </div>
+          <div>
+            <button
+              class="btn btn-success"
+              onclick=" window.open('https://anywhere-fitness-tt20.netlify.app/','_blank')"
+            >
+              View Demo Here
+            </button>
+          </div>
         </article>
 
         <!-- About -->
@@ -167,7 +172,9 @@
               >
             </li>
             <li>
-              <a href="https://github.com/Stone98" class="icon brands fa-github"
+              <a
+                href="https://github.com/CogsCode98"
+                class="icon brands fa-github"
                 ><span class="label">GitHub</span></a
               >
             </li>
